[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 66.0
margin_top = 49.0
margin_right = 239.0
margin_bottom = 133.0
text = "BUTTON 1"

[node name="Button2" type="Button" parent="."]
margin_left = 330.0
margin_top = 49.0
margin_right = 500.0
margin_bottom = 134.0
text = "BUTTON 2"

[node name="Button3" type="Button" parent="."]
margin_left = 586.0
margin_top = 49.0
margin_right = 759.0
margin_bottom = 133.0
text = "BUTTON 3"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 71.0
margin_top = 150.0
margin_right = 233.0
margin_bottom = 174.0

[node name="Label" type="Label" parent="."]
margin_left = 318.0
margin_top = 157.0
margin_right = 482.0
margin_bottom = 175.0

[node name="Label2" type="Label" parent="."]
margin_left = 591.0
margin_top = 157.0
margin_right = 757.0
margin_bottom = 174.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
